fix(ui): add scroll padding
Prevents sticky headings from covering framework names when navigating to a component via the sidebar.

--- a/src/app.css
+++ b/src/app.css
@@ -11,3 +11,6 @@
 .no-scroll::-webkit-scrollbar {
   display: none; /* Chrome, Safari and Opera */
 }
+html {
+  scroll-padding-top: 60px; /* Approximate Header height with a horizontal scrollbar. */
+}
